5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1596_2895.log
== TEST (2019-03-26 18:31:41) 
-- CODE:
#definimos a quantidade de jogos por site
qjogos=int(input("quantidade de jogos por site"))
#definimos a variavel do valor do jogo
valor_jogo=int(input("valor do jogo por site"))
#definimos a variavel do frete
valor_frete=int(input("valor frete por site"))
#definimos a variavel do total a pagar
total=int((qjogos*valor_jogo)+valor_frete))
#imprimimos o resultado
print(total)
-- ERROR:
File "XXXX", line 8
    total=int((qjogos*valor_jogo)+valor_frete))
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:31:53) 
-- CODE:
#definimos a quantidade de jogos por site
qjogos=int(input("quantidade de jogos por site"))
#definimos a variavel do valor do jogo
valor_jogo=int(input("valor do jogo por site"))
#definimos a variavel do frete
valor_frete=int(input("valor frete por site"))
#definimos a variavel do total a pagar
total=int((qjogos*valor_jogo)+valor_frete)
#imprimimos o resultado
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_jogo=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:09) 
-- CODE:
#definimos a quantidade de jogos por site
qjogos=int(input("quantidade de jogos por site"))
#definimos a variavel do valor do jogo
valor_jogo=int(input("valor do jogo por site"))
#definimos a variavel do frete
valor_frete=int(input("valor frete por site"))
#definimos a variavel do total a pagar
total=int((qjogos*valor_jogo)+valor_frete)
#imprimimos o resultado
print(total)
-- EXECUTION TIME:
0.122298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    valor_jogo=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:32:44) 
-- CODE:
#definimos a quantidade de jogos por site
qjogos=float(input("quantidade de jogos por site"))
#definimos a variavel do valor do jogo
valor_jogo=float(input("valor do jogo por site"))
#definimos a variavel do frete
valor_frete=float(input("valor frete por site"))
#definimos a variavel do total a pagar
total=float((qjogos*valor_jogo)+valor_frete)
#imprimimos o resultado
print(total)
-- EXECUTION TIME:
0.19081
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
